# learning_agents

./: .gitignore  README.md  main.py  pyproject.toml
.well-known/: agent.json
agents/: __init__.py  quiz_agent.py  review_agent.py  teacher_agent.py
core/: __init__.py  a2a.py  prompt_loader.py
frontend/: __init__.py  app.py
mcp-client/: __init__.py  client.py  tools.py
prompts/: quiz_prompt.txt  review_prompt.txt  teacher_prompt.txt
