[project]
name = "learning-agents"
version = "0.1.0"
description = "AIエージェントベースの学習システム"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "aiofiles>=23.2.1",
    "jinja2>=3.1.2",
    "streamlit>=1.28.0",
    # 将来的に使用予定の依存関係（コメントアウト）
    # "openai>=1.0.0",
    # "langchain>=0.1.0",
    # "mcp-adk>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

